List of ToDo items
- Creation of solution and WPF project
- NuGet packages added: MVVMLight, Newtonsoft.JSON
- Added FontAwesome
- Creation of MainWindow View and MainViewModel
- Added web service call to get list of items

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ ToDoAPI/ToDo.Core/bin
 ToDoAPI/ToDo.Core/obj
 ToDoAPI/ToDo.Server/bin
 ToDoAPI/ToDo.Server/obj
+ToDoClient/.vs
+ToDoClient/packages
+ToDoClient/ToDo.WPFClient/bin
+ToDoClient/ToDo.WPFClient/obj
+ToDoClient/ToDo.WPFClient/packages
