--- a/ToDoClient/ToDo.WPFClient/App.config
+++ b/ToDoClient/ToDo.WPFClient/App.config
@@ -6,5 +6,6 @@
     <appSettings>
       <add key="TodoDataServerURL" value="http://localhost:8080/api/"/>
       <add key="GetDataEndpoint" value="todo"/>
+      <add key="AddItemEndpoint" value="todo"/>
     </appSettings>
 </configuration>
