--- a/ToDoClient/ToDo.WPFClient/ToDo.WPFClient.csproj
+++ b/ToDoClient/ToDo.WPFClient/ToDo.WPFClient.csproj
@@ -75,9 +75,22 @@
     </ApplicationDefinition>
     <Compile Include="Model\IDataService.cs" />
     <Compile Include="Model\TodoDataService.cs" />
+    <Compile Include="ViewModel\AddItemViewModel.cs" />
+    <Compile Include="ViewModel\INavigationService.cs" />
+    <Compile Include="ViewModel\ListItemsViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\NavigationPage.cs" />
+    <Compile Include="ViewModel\NavigationService.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
-    <Page Include="Views\MainWindow.xaml">
+    <Page Include="View\AddItemPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ListItemsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -85,7 +98,13 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Views\MainWindow.xaml.cs">
+    <Compile Include="View\AddItemPage.xaml.cs">
+      <DependentUpon>AddItemPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ListItemsPage.xaml.cs">
+      <DependentUpon>ListItemsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
