--- a/ToDoClient/ToDo.WPFClient/App.config
+++ b/ToDoClient/ToDo.WPFClient/App.config
@@ -7,5 +7,6 @@
       <add key="TodoDataServerURL" value="http://localhost:8080/api/"/>
       <add key="GetDataEndpoint" value="todo"/>
       <add key="AddItemEndpoint" value="todo"/>
+      <add key="DeleteItemEndpoint" value="todo/{0}"/>
     </appSettings>
 </configuration>
