Update Item Complete status
Added web service call to updateitem.
UI updates for updating completed status for an item.
ViewModel changes for update item.

--- a/ToDoClient/ToDo.WPFClient/App.config
+++ b/ToDoClient/ToDo.WPFClient/App.config
@@ -8,5 +8,6 @@
       <add key="GetDataEndpoint" value="todo"/>
       <add key="AddItemEndpoint" value="todo"/>
       <add key="DeleteItemEndpoint" value="todo/{0}"/>
+      <add key="UpdateItemEndpoint" value="todo/{0}"/>
     </appSettings>
 </configuration>
