Added unit tests
- Added Nuget packages for unit testing (NUnit, NSubstitute, NUnit3TestAdapter)
- Added test cases for ViewModels
- Modified MessageBox for IMessageBox

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ ToDoClient/packages
 ToDoClient/ToDo.WPFClient/bin
 ToDoClient/ToDo.WPFClient/obj
 ToDoClient/ToDo.WPFClient/packages
+ToDoClient/TodoUnitTests/bin
+ToDoClient/TodoUnitTests/obj
+ToDoClient/TodoUnitTests/packages
