--- a/ToDoClient/ToDo.WPFClient/ToDo.WPFClient.csproj
+++ b/ToDoClient/ToDo.WPFClient/ToDo.WPFClient.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>roche.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommonServiceLocator, Version=2.0.2.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.2.0.2\lib\net45\CommonServiceLocator.dll</HintPath>
@@ -82,7 +85,6 @@
     <Compile Include="ViewModel\INavigationService.cs" />
     <Compile Include="ViewModel\ListItemsViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
-    <Compile Include="ViewModel\NavigationPage.cs" />
     <Compile Include="ViewModel\NavigationService.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Page Include="View\AddItemPage.xaml">
@@ -145,6 +147,9 @@
       <Project>{042bbc29-c2ae-4de9-96d1-ef01281d5c70}</Project>
       <Name>ToDo.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="roche.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
